Prepared sub-module for Redis-MDDE (based on YCSB Redis)

--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,8 @@ LICENSE file.
     <module>tablestore</module>
     <!--<module>voldemort</module>-->
     <module>voltdb</module>
+    <!-- MDDE Extension -->
+    <module>redis-mdde</module>
   </modules>
 
   <build>
