--- a/bin/bindings.properties
+++ b/bin/bindings.properties
@@ -68,6 +68,7 @@ orientdb:site.ycsb.db.OrientDBClient
 postgrenosql:site.ycsb.postgrenosql.PostgreNoSQLDBClient
 rados:site.ycsb.db.RadosClient
 redis:site.ycsb.db.RedisClient
+redis-mdde:site.ycsb.db.RedisMDDEClient
 rest:site.ycsb.webservice.rest.RestClient
 riak:site.ycsb.db.riak.RiakKVClient
 rocksdb:site.ycsb.db.rocksdb.RocksDBClient
