Renamed MDDE-Redis binding folder; Fixed YCSB build configuration.

--- a/bin/bindings.properties
+++ b/bin/bindings.properties
@@ -60,6 +60,7 @@ infinispan-cs:site.ycsb.db.InfinispanRemoteClient
 infinispan:site.ycsb.db.InfinispanClient
 jdbc:site.ycsb.db.JdbcDBClient
 kudu:site.ycsb.db.KuduYCSBClient
+mdde.redis:site.ycsb.db.RedisMDDEClient
 memcached:site.ycsb.db.MemcachedClient
 mongodb:site.ycsb.db.MongoDbClient
 mongodb-async:site.ycsb.db.AsyncMongoDbClient
@@ -68,7 +69,6 @@ orientdb:site.ycsb.db.OrientDBClient
 postgrenosql:site.ycsb.postgrenosql.PostgreNoSQLDBClient
 rados:site.ycsb.db.RadosClient
 redis:site.ycsb.db.RedisClient
-redis-mdde:site.ycsb.db.RedisMDDEClient
 rest:site.ycsb.webservice.rest.RestClient
 riak:site.ycsb.db.riak.RiakKVClient
 rocksdb:site.ycsb.db.rocksdb.RocksDBClient
