--- a/mdde.redis/pom.xml
+++ b/mdde.redis/pom.xml
@@ -25,8 +25,8 @@ LICENSE file.
     <relativePath>../binding-parent</relativePath>
   </parent>
   
-  <artifactId>redis-mdde-binding</artifactId>
-  <name>Redis-MDDE DB Binding</name>
+  <artifactId>mdde.redis-binding</artifactId>
+  <name>MDDE-Redis DB Binding</name>
   <packaging>jar</packaging>
 
   <dependencies>
