--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,7 @@ LICENSE file.
     <voldemort.version>0.81</voldemort.version>
     <tablestore.version>4.8.0</tablestore.version>
     <voltdb.version>9.1.1</voltdb.version>
+    <mdde.redis.version>2.9.0</mdde.redis.version>
   </properties>
 
   <modules>
@@ -162,6 +163,8 @@ LICENSE file.
     <module>binding-parent</module>
     <module>distribution</module>
     <!-- all the datastore bindings, lex sorted please -->
+    <!-- MDDE Extension -->
+    <module>mdde.redis</module>
     <module>accumulo1.9</module>
     <module>aerospike</module>
     <module>arangodb</module>
@@ -211,8 +214,6 @@ LICENSE file.
     <module>tablestore</module>
     <!--<module>voldemort</module>-->
     <module>voltdb</module>
-    <!-- MDDE Extension -->
-    <module>redis-mdde</module>
   </modules>
 
   <build>
