--- a/mdde.redis/pom.xml
+++ b/mdde.redis/pom.xml
@@ -33,7 +33,7 @@ LICENSE file.
     <dependency>
       <groupId>redis.clients</groupId>
       <artifactId>jedis</artifactId>
-      <version>${redis.version}</version>
+      <version>3.2.0</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
