--- a/bin/bindings.properties
+++ b/bin/bindings.properties
@@ -60,7 +60,7 @@ infinispan-cs:site.ycsb.db.InfinispanRemoteClient
 infinispan:site.ycsb.db.InfinispanClient
 jdbc:site.ycsb.db.JdbcDBClient
 kudu:site.ycsb.db.KuduYCSBClient
-mdde.redis:site.ycsb.db.RedisMDDEClient
+mdde.redis:site.ycsb.db.RedisMultinodeMDDEClient
 memcached:site.ycsb.db.MemcachedClient
 mongodb:site.ycsb.db.MongoDbClient
 mongodb-async:site.ycsb.db.AsyncMongoDbClient
