MDDE Redis client: Retrieve the location of a tuple from the registry on read

--- a/mdde.redis/pom.xml
+++ b/mdde.redis/pom.xml
@@ -36,6 +36,11 @@ LICENSE file.
       <artifactId>mdde-registry-shared</artifactId>
       <version>0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>dev.jcri.mdde.registry</groupId>
+      <artifactId>mdde-registry-tcp-shared</artifactId>
+      <version>0.1-SNAPSHOT</version>
+    </dependency>
 
     <dependency>
       <groupId>redis.clients</groupId>
